# CircuitPython_DisplayIO_ST7565

./: .readthedocs.yaml  LICENSE  README.rst  README.rst.license  displayio_st7565.py  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml
docs/: api.rst  api.rst.license  conf.py  examples.rst  examples.rst.license  index.rst
examples/: displayio_st7565_simpletest.py
